--- a/chat.html
+++ b/chat.html
@@ -43,5 +43,40 @@
                 </div>
             </div>
         </header>
+        <main class="chat">
+            <div class="date-divider">
+                <span class="date-divider__text">Wednesday, August</span>
+            </div>
+            <div class="chat__message chat__message-from-me">
+                <span class="chat__message-time">17:55</span>
+                <span class="chat__message-body">
+                    뭐함
+                </span>
+            </div>
+            <div class="chat__message chat__message-to-me">
+                <img
+                    src="images/avatar.jpg"
+                    alt=""
+                    class="chat__message-avatar"
+                />
+                <div class="chat__message-center">
+                    <h3 class="chat__message-username">듄성</h3>
+                    <span class="chat__message-body">
+                        누워있음
+                    </span>
+                </div>
+                <span class="chat__message-time">17:56</span>
+            </div>
+        </main>
+        <div class="type-message">
+            <i class="fas fa-plus fa-lg"></i>
+            <div class="type-message__input">
+                <input type="text" />
+                <i class="far fa-smile"></i>
+                <span class="record-message">
+                    <i class="fas fa-microphone"></i>
+                </span>
+            </div>
+        </div>
     </body>
 </html>
