--- a/chats.html
+++ b/chats.html
@@ -52,28 +52,32 @@
             </div>
             <ul class="chats__list">
                 <li class="chats__chat">
-                    <div class="chat__content">
-                        <img src="images/avatar.jpg" alt="" />
-                        <div class="chat__preview">
-                            <h3 class="chat__user">듄성</h3>
-                            <sapn class="chat__last-message">뭐함</sapn>
+                    <a href="chat.html">
+                        <div class="chat__content">
+                            <img src="images/avatar.jpg" alt="" />
+                            <div class="chat__preview">
+                                <h3 class="chat__user">듄성</h3>
+                                <sapn class="chat__last-message">뭐함</sapn>
+                            </div>
                         </div>
-                    </div>
-                    <div class="chat__date-time">
-                        15:55
-                    </div>
+                        <div class="chat__date-time">
+                            15:55
+                        </div>
+                    </a>
                 </li>
                 <li class="chats__chat">
-                    <div class="chat__content">
-                        <img src="images/avatar.jpg" alt="" />
-                        <div class="chat__preview">
-                            <h3 class="chat__user">KakaoTalk</h3>
-                            <sapn class="chat__last-message">...</sapn>
+                    <a href="chat.html">
+                        <div class="chat__content">
+                            <img src="images/avatar.jpg" alt="" />
+                            <div class="chat__preview">
+                                <h3 class="chat__user">KakaoTalk</h3>
+                                <sapn class="chat__last-message">...</sapn>
+                            </div>
                         </div>
-                    </div>
-                    <div class="chat__date-time">
-                        11:25
-                    </div>
+                        <div class="chat__date-time">
+                            11:25
+                        </div>
+                    </a>
                 </li>
             </ul>
             <div class="chat-btn">
