Add links / profile.html done

--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
                 <header class="friends__section-header">
                     <h6 class="firends__section-title">My profile</h6>
                 </header>
+
                 <div class="friends__section-rows">
                     <div class="friends__section-row">
-                        <img src="" alt="" />
-                        <span class="friends__section-name">명현</span>
+                        <a href="profile.html">
+                            <img src="images/avatar.jpg" alt="" />
+                            <span class="friends__section-name">명현</span>
+                        </a>
                     </div>
                     <div class="friends__section-row">
                         <img src="" alt="" />
