--- a/profile.html
+++ b/profile.html
@@ -32,7 +32,9 @@
             </div>
             <div class="header__bottom">
                 <div class="header__column">
-                    <i class="fas fa-times fa-lg"></i>
+                    <a href="index.html">
+                        <i class="fas fa-times fa-lg"></i>
+                    </a>
                 </div>
                 <div class="header__column"></div>
                 <div class="header__column">
@@ -40,5 +42,26 @@
                 </div>
             </div>
         </header>
+        <main class="profile">
+            <header class="profile__header">
+                <img src="images/avatar.jpg" alt="" />
+                <h3 class="profile__header-title">명현</h3>
+            </header>
+            <input type="text" placeholder="jngmnghn@gmail.com" />
+            <div class="profile__actions">
+                <div class="profile__action">
+                    <span class="profile__action-circle">
+                        <i class="fas fa-comment"></i>
+                    </span>
+                    <span class="profile__action-title">My Chatroom</span>
+                </div>
+                <div class="profile__action">
+                    <span class="profile__action-circle">
+                        <i class="fas fa-pencil-alt"></i>
+                    </span>
+                    <span class="profile__action-title">Edit Profile</span>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
