--- a/chat.html
+++ b/chat.html
@@ -32,7 +32,9 @@
             </div>
             <div class="header__bottom">
                 <div class="header__column">
-                    <i class="fas fa-chevron-left"></i>
+                    <a href="chats.html">
+                        <i class="fas fa-chevron-left"></i>
+                    </a>
                 </div>
                 <div class="header__column">
                     <span class="header__text">듄성</span>
